# object_tracking_amb

./: .gitignore  README.md  detector.py  main.py  pyproject.toml  requirements.txt
YOLOv10/: README.md  README_YOLOv10.md
YOLOv10/src/: config.py  detector.py  detector_onnx.py  main.py  postprocessing.py  preprocessing.py
common_utils/: visualizer.py
object_tracker/: config.py  detect.py  download_model.py  types.py
object_tracker/detectors/: base.py  yolov10.py
object_tracker/io_transforms/: postprocessing.py  preprocessing.py
object_tracker/visualization/: draw_detections.py
scripts/: main.py
tests/: test_detectors.py  test_transforms.py  test_visualizer.py
utils/: check_onnx_model.py
