[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-tracker-amb"
version = "0.1.0"
description = "Object detection and tracking using YOLOv10 ONNX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ambuj Choudha", email = "ambuj.choudha@rwth-aachen.de"},
]
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "onnxruntime>=1.15.0",
]

[project.urls]
Repository = "https://github.com/Ambuj-Choudha/object_tracking_amb"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
detect = "object_tracker.detect:main"

[tool.setuptools]
packages = ["object_tracker"]

[tool.setuptools.package-data]
object_tracker = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=object_tracker --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long (handled by formatter)
